--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,25 @@
 
   <groupId>org.fcrepo.migration</groupId>
   <artifactId>migration-utils</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>4.1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>migration-utils</name>
   <url>http://maven.apache.org</url>
 
   <properties>
+    <project_name>migration-utils</project_name>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>4.1.1.RELEASE</spring.version>
     <jena.version>2.12.1</jena.version>
   </properties>
+
+  <scm>
+    <connection>scm:git:git://github.com/fcrepo4-labs/${project_name}.git</connection>
+    <developerConnection>scm:git:git@github.com:fcrepo4-labs/${project_name}.git</developerConnection>
+    <url>https://github.com/fcrepo4-labs/${project_name}</url>
+    <tag>HEAD</tag>
+  </scm>
 
   <dependencies>
     <dependency>
@@ -73,12 +81,12 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-client-impl</artifactId>
-      <version>4.1.1-SNAPSHOT</version>
+      <version>4.1.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-client</artifactId>
-      <version>4.1.1-SNAPSHOT</version>
+      <version>4.1.2-SNAPSHOT</version>
     </dependency>
 
     <dependency>
