--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ before_install:
   - "echo $JAVA_OPTS"
   - "export JAVA_OPTS=-Xmx512m"
 notifications:
-  irc: "irc.freenode.org#duraspace-ff"
+  irc: "irc.freenode.org#fcrepo"
