- added javadoc plugin to pom.xml, version 2.10.3 - ran mvn javadoc:jar and mvn javadoc:test-aggregate, fixed warning, ran until success - added cmds to .travis.yml - build image already in README.md

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,10 @@ jdk:
 before_install:
   - "echo $JAVA_OPTS"
   - "export JAVA_OPTS=-Xmx512m"
+
+script:
+  - mvn javadoc:jar
+  - mvn javadoc:test-aggregate
+
 notifications:
   irc: "irc.freenode.org#fcrepo"
