--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugin</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.3</version>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>${checkstyle.plugin.version}</version>
