--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ before_install:
   - "export JAVA_OPTS=-Xmx512m"
 
 script:
+  - mvn install
+  - mvn test -B
   - mvn javadoc:jar
   - mvn javadoc:test-aggregate
 
