--- a/pom.xml
+++ b/pom.xml
@@ -284,22 +284,36 @@
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.5.4</version>
-        <configuration>
-          <descriptors>
-            <descriptor>src/assembly/driver.xml</descriptor>
-          </descriptors>
-          <archive>
-            <manifest>
-              <mainClass>org.fcrepo.migration.Migrator</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
         <executions>
           <execution>
+            <id>create-runnable-jar</id>
             <phase>package</phase>
             <goals>
               <goal>single</goal>
             </goals>
+            <configuration>
+              <descriptors>
+                <descriptor>src/assembly/driver.xml</descriptor>
+              </descriptors>
+              <archive>
+                <manifest>
+                  <mainClass>org.fcrepo.migration.Migrator</mainClass>
+                </manifest>
+              </archive>
+            </configuration>
+          </execution>
+          <execution>
+            <id>create-distribution</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <finalName>migration-utils</finalName>
+              <descriptors>
+                <descriptor>src/assembly/zip.xml</descriptor>
+              </descriptors>
+            </configuration>
           </execution>
         </executions>
       </plugin>
