[maven-release-plugin] prepare release migration-utils-4.4.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo</artifactId>
-    <version>4.3.1-SNAPSHOT</version>
+    <version>4.4.0</version>
   </parent>
   <groupId>org.fcrepo.migration</groupId>
   <artifactId>migration-utils</artifactId>
-  <version>4.3.1-SNAPSHOT</version>
+  <version>4.4.0</version>
   <packaging>jar</packaging>
 
   <name>migration-utils</name>
@@ -28,7 +26,7 @@
     <connection>scm:git:git://github.com/fcrepo4-labs/${project_name}.git</connection>
     <developerConnection>scm:git:git@github.com:fcrepo4-exts/${project_name}.git</developerConnection>
     <url>https://github.com/fcrepo4-exts/${project_name}</url>
-    <tag>HEAD</tag>
+    <tag>migration-utils-4.4.0</tag>
   </scm>
   
   <dependencyManagement>
@@ -92,12 +90,12 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-client-impl</artifactId>
-      <version>4.3.1-SNAPSHOT</version>
+      <version>4.4.0</version>
     </dependency>
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-client</artifactId>
-      <version>4.3.1-SNAPSHOT</version>
+      <version>4.4.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -114,7 +112,7 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-webapp</artifactId>
-      <version>${project.version}</version>
+      <version>4.4.0</version>
       <type>war</type>
       <scope>test</scope>
     </dependency>
