--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo</artifactId>
-    <version>4.4.0</version>
+    <version>4.4.1-SNAPSHOT</version>
   </parent>
   <groupId>org.fcrepo.migration</groupId>
   <artifactId>migration-utils</artifactId>
-  <version>4.4.0</version>
+  <version>4.4.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>migration-utils</name>
@@ -26,7 +26,7 @@
     <connection>scm:git:git://github.com/fcrepo4-labs/${project_name}.git</connection>
     <developerConnection>scm:git:git@github.com:fcrepo4-exts/${project_name}.git</developerConnection>
     <url>https://github.com/fcrepo4-exts/${project_name}</url>
-    <tag>migration-utils-4.4.0</tag>
+    <tag>HEAD</tag>
   </scm>
   
   <dependencyManagement>
@@ -90,12 +90,12 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-client-impl</artifactId>
-      <version>4.4.0</version>
+      <version>4.4.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-client</artifactId>
-      <version>4.4.0</version>
+      <version>4.4.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -112,7 +112,7 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>fcrepo-webapp</artifactId>
-      <version>4.4.0</version>
+      <version>4.4.1-SNAPSHOT</version>
       <type>war</type>
       <scope>test</scope>
     </dependency>
