--- a/pom.xml
+++ b/pom.xml
@@ -253,9 +253,12 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugin</groupId>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.3</version>
+        <version>3.1.1</version>
+        <configuration>
+          <source>8</source>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
