Add compatibility for Java 11 (#56)
* Add compatibility for Java 11

Resolves: https://jira.duraspace.org/browse/FCREPO-3043

Either Java 8 or 11 can be used to build migration-utils.

Tested with both java 8 and 11

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
     <fcrepo-build-tools.version>4.3.0</fcrepo-build-tools.version>
     <fcrepo-java-client.version>0.2.1</fcrepo-java-client.version>
     <fcrepo.version>4.7.4</fcrepo.version>
+    <javaee.xml.version>2.3.1</javaee.xml.version>
+    <jaxb.core.version>2.3.0.1</jaxb.core.version>
+    <jaxb.impl.version>2.3.1</jaxb.impl.version>
   </properties>
 
   <scm>
@@ -124,6 +127,22 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>${spring.version}</version>
+    </dependency>
+    <!--  modules needed for Java 11 support EE modules. -->
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>${javaee.xml.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>${jaxb.core.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>${jaxb.impl.version}</version>
     </dependency>
 
     <dependency>
@@ -234,9 +253,12 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugin</groupId>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.3</version>
+        <version>3.1.1</version>
+        <configuration>
+          <source>8</source>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
