--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
   <properties>
     <project_name>migration-utils</project_name>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring.version>4.1.1.RELEASE</spring.version>
+    <spring.version>4.3.17.RELEASE</spring.version>
+    <lucene.version>7.1.0</lucene.version>
     <jena.version>2.12.1</jena.version>
     <checkstyle.plugin.version>2.15</checkstyle.plugin.version>
     <logback.version>1.1.2</logback.version>
@@ -95,7 +96,7 @@
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpclient</artifactId>
-       <version>4.3.3</version>
+       <version>4.3.6</version>
        <exclusions>
            <exclusion>
                <groupId>log4j</groupId>
@@ -121,12 +122,12 @@
        <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-core</artifactId>
-      <version>4.10.3</version>
+      <version>${lucene.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-analyzers-common</artifactId>
-      <version>4.10.3</version>
+      <version>${lucene.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
