--- a/pom.xml
+++ b/pom.xml
@@ -402,7 +402,7 @@
               </descriptors>
               <archive>
                 <manifest>
-                  <mainClass>org.fcrepo.migration.Migrator</mainClass>
+                  <mainClass>org.fcrepo.migration.PicocliMigrator</mainClass>
                 </manifest>
               </archive>
             </configuration>
