Add command line capability
Resolves: https://jira.duraspace.org/browse/FCREPO-3107

--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,11 @@
       <type>war</type>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>info.picocli</groupId>
+      <artifactId>picocli</artifactId>
+      <version>4.0.4</version>
+    </dependency>
   </dependencies>
 
   <repositories>
@@ -397,7 +402,7 @@
               </descriptors>
               <archive>
                 <manifest>
-                  <mainClass>org.fcrepo.migration.Migrator</mainClass>
+                  <mainClass>org.fcrepo.migration.PicocliMigrator</mainClass>
                 </manifest>
               </archive>
             </configuration>
