--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>fcrepo-storage-ocfl</artifactId>
+      <version>6.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>${logback.version}</version>
@@ -104,16 +109,6 @@
            </exclusion>
        </exclusions>
      </dependency>
-    <dependency>
-      <groupId>edu.wisc.library.ocfl</groupId>
-      <artifactId>ocfl-java-core</artifactId>
-      <version>0.0.4-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>edu.wisc.library.ocfl</groupId>
-      <artifactId>ocfl-java-api</artifactId>
-      <version>0.0.4-SNAPSHOT</version>
-    </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
