--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
   </properties>
 
   <scm>
-    <connection>scm:git:git://github.com/fcrepo4-labs/${project_name}.git</connection>
-    <developerConnection>scm:git:git@github.com:fcrepo4-exts/${project_name}.git</developerConnection>
-    <url>https://github.com/fcrepo4-exts/${project_name}</url>
+    <connection>scm:git:git://github.com/fcrepo-exts/${project_name}.git</connection>
+    <developerConnection>scm:git:git@github.com:fcrepo-exts/${project_name}.git</developerConnection>
+    <url>https://github.com/fcrepo-exts/${project_name}</url>
     <tag>HEAD</tag>
   </scm>
 
