--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.fcrepo.migration</groupId>
   <artifactId>migration-utils</artifactId>
-  <version>6.0.0-alpha-2-SNAPSHOT</version>
+  <version>6.0.0-alpha-2</version>
   <packaging>jar</packaging>
 
   <name>migration-utils</name>
@@ -32,7 +32,7 @@
     <connection>scm:git:git://github.com/fcrepo-exts/${project_name}.git</connection>
     <developerConnection>scm:git:git@github.com:fcrepo-exts/${project_name}.git</developerConnection>
     <url>https://github.com/fcrepo-exts/${project_name}</url>
-    <tag>HEAD</tag>
+    <tag>migration-utils-6.0.0-alpha-2</tag>
   </scm>
 
   <dependencies>
